exports[`no-negation-in-equality-check > invalid(1): !foo === bar 1`] = `

  1 | !foo === bar

`;

exports[`no-negation-in-equality-check > invalid(1): !foo === bar 2`] = `

Message:
> 1 | !foo === bar
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '!==' check.:
  1 | foo !== bar

`;

exports[`no-negation-in-equality-check > invalid(10): foo\n!/* comment */[a, b].join('') === c 1`] = `

  1 | foo
  2 | !/* comment */[a, b].join('') === c

`;

exports[`no-negation-in-equality-check > invalid(10): foo\n!/* comment */[a, b].join('') === c 2`] = `

Message:
  1 | foo
> 2 | !/* comment */[a, b].join('') === c
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '!==' check.:
  1 | foo
  2 | ;/* comment */[a, b].join('') !== c

`;

exports[`no-negation-in-equality-check > invalid(2): !foo !== bar 1`] = `

  1 | !foo !== bar

`;

exports[`no-negation-in-equality-check > invalid(2): !foo !== bar 2`] = `

Message:
> 1 | !foo !== bar
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '===' check.:
  1 | foo === bar

`;

exports[`no-negation-in-equality-check > invalid(3): !foo == bar 1`] = `

  1 | !foo == bar

`;

exports[`no-negation-in-equality-check > invalid(3): !foo == bar 2`] = `

Message:
> 1 | !foo == bar
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '!=' check.:
  1 | foo != bar

`;

exports[`no-negation-in-equality-check > invalid(4): !foo != bar 1`] = `

  1 | !foo != bar

`;

exports[`no-negation-in-equality-check > invalid(4): !foo != bar 2`] = `

Message:
> 1 | !foo != bar
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '==' check.:
  1 | foo == bar

`;

exports[`no-negation-in-equality-check > invalid(5): function x() {\n\treturn!foo === bar;\n} 1`] = `

  1 | function x() {
  2 | 	return!foo === bar;
  3 | }

`;

exports[`no-negation-in-equality-check > invalid(5): function x() {\n\treturn!foo === bar;\n} 2`] = `

Message:
  1 | function x() {
> 2 | 	return!foo === bar;
    | 	      ^ Negated expression is not allowed in equality check.
  3 | }

Suggestion 1/1: Switch to '!==' check.:
  1 | function x() {
  2 | 	return foo !== bar;
  3 | }

`;

exports[`no-negation-in-equality-check > invalid(6): function x() {\n\treturn!\n\t\tfoo === bar;\n\tthrow!\n\t\tfoo === bar;\n} 1`] = `

  1 | function x() {
  2 | 	return!
  3 | 		foo === bar;
  4 | 	throw!
  5 | 		foo === bar;
  6 | }

`;

exports[`no-negation-in-equality-check > invalid(6): function x() {\n\treturn!\n\t\tfoo === bar;\n\tthrow!\n\t\tfoo === bar;\n} 2`] = `

Message:
  1 | function x() {
> 2 | 	return!
    | 	      ^ Negated expression is not allowed in equality check.
  3 | 		foo === bar;
  4 | 	throw!
  5 | 		foo === bar;
  6 | }

Suggestion 1/1: Switch to '!==' check.:
  1 | function x() {
  2 | 	return  (
  3 | 		foo !== bar);
  4 | 	throw!
  5 | 		foo === bar;
  6 | }

`;

exports[`no-negation-in-equality-check > invalid(6): function x() {\n\treturn!\n\t\tfoo === bar;\n\tthrow!\n\t\tfoo === bar;\n} 3`] = `

Message:
  1 | function x() {
  2 | 	return!
  3 | 		foo === bar;
> 4 | 	throw!
    | 	     ^ Negated expression is not allowed in equality check.
  5 | 		foo === bar;
  6 | }

Suggestion 1/1: Switch to '!==' check.:
  1 | function x() {
  2 | 	return!
  3 | 		foo === bar;
  4 | 	throw  (
  5 | 		foo !== bar);
  6 | }

`;

exports[`no-negation-in-equality-check > invalid(7): foo\n!(a) === b 1`] = `

  1 | foo
  2 | !(a) === b

`;

exports[`no-negation-in-equality-check > invalid(7): foo\n!(a) === b 2`] = `

Message:
  1 | foo
> 2 | !(a) === b
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '!==' check.:
  1 | foo
  2 | ;(a) !== b

`;

exports[`no-negation-in-equality-check > invalid(8): foo\n![a, b].join('') === c 1`] = `

  1 | foo
  2 | ![a, b].join('') === c

`;

exports[`no-negation-in-equality-check > invalid(8): foo\n![a, b].join('') === c 2`] = `

Message:
  1 | foo
> 2 | ![a, b].join('') === c
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '!==' check.:
  1 | foo
  2 | ;[a, b].join('') !== c

`;

exports[`no-negation-in-equality-check > invalid(9): foo\n! [a, b].join('') === c 1`] = `

  1 | foo
  2 | ! [a, b].join('') === c

`;

exports[`no-negation-in-equality-check > invalid(9): foo\n! [a, b].join('') === c 2`] = `

Message:
  1 | foo
> 2 | ! [a, b].join('') === c
    | ^ Negated expression is not allowed in equality check.

Suggestion 1/1: Switch to '!==' check.:
  1 | foo
  2 | ; [a, b].join('') !== c

`;
